y.output
State 1 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: INT
    3    | lvalue
    4    | NIL
    5    | STRING
    6    | BREAK
    7    | LPAREN expression_sequence RPAREN
    8    | function_call
    9    | arithmetic_exp
   10    | negation_exp
   11    | comparison_exp
   12    | boolean_exp
   13    | record_creation
   14    | array_creation
   15    | assignment_exp
   16    | if_statement
   17    | while_loop
   18    | for_loop
   19    | let_statement

   20 expression_sequence: exp exp_seq_tail

   21 exp_seq_tail: ε
   22             | SEMICOLON exp exp_seq_tail

   23 function_call: ID LPAREN function_args RPAREN

   24 function_args: ε
   25              | exp function_args_tail

   26 function_args_tail: ε
   27                   | COMMA exp function_args_tail

   28 arithmetic_exp: exp PLUS exp
   29               | exp MINUS exp
   30               | exp TIMES exp
   31               | exp DIVIDE exp

   32 negation_exp: MINUS exp

   33 comparison_exp: exp EQ exp
   34               | exp NEQ exp
   35               | exp GT exp
   36               | exp GE exp
   37               | exp LT exp
   38               | exp LE exp

   39 boolean_exp: exp AND exp
   40            | exp OR exp

   41 record_creation: ID LBRACE record_list RBRACE

   42 record_list: ID EQ exp record_list_extension

   43 record_list_extension: ε
   44                      | COMMA ID EQ exp record_list_extension

   45 array_creation: ID LBRACK exp RBRACK OF exp

   46 assignment_exp: lvalue ASSIGN exp

   47 if_statement: IF exp THEN exp ELSE exp
   48             | IF exp THEN exp

   49 while_loop: WHILE exp DO exp

   50 for_loop: FOR ID ASSIGN exp TO exp DO exp

   51 let_statement: LET declaration_sequence IN expression_sequence END

   52 declaration_sequence: ε
   53                     | declaration declaration_sequence

   54 declaration: type_declaration
   55            | variable_declaration
   56            | function_declaration

   57 type_declaration: TYPE ID EQ type

   58 type: ID
   59     | LBRACE type_fields RBRACE
   60     | ARRAY OF ID

   61 type_fields: ε
   62            | ID COLON ID type_fields_extension

   63 type_fields_extension: ε
   64                      | COMMA ID COLON ID type_fields_extension

   65 variable_declaration: VAR ID ASSIGN exp
   66                     | VAR ID COLON ID ASSIGN exp

   67 function_declaration: FUNCTION ID LPAREN type_fields RPAREN EQ exp
   68                     | FUNCTION ID LPAREN type_fields RPAREN COLON ID EQ exp

   69 lvalue: ID
   70       | lvalue DOT ID
   71       | lvalue LBRACK exp RBRACK


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <sval> (258) 23 41 42 44 45 50 57 58 60 62 64 65 66 67 68 69 70
    STRING <sval> (259) 5
    INT <ival> (260) 2
    COMMA (261) 27 44 64
    COLON (262) 62 64 66 68
    SEMICOLON (263) 22
    LPAREN (264) 7 23 67 68
    RPAREN (265) 7 23 67 68
    LBRACK (266) 45 71
    RBRACK (267) 45 71
    LBRACE (268) 41 59
    RBRACE (269) 41 59
    DOT (270) 70
    PLUS (271) 28
    MINUS (272) 29 32
    TIMES (273) 30
    DIVIDE (274) 31
    EQ (275) 33 42 44 57 67 68
    NEQ (276) 34
    LT (277) 37
    LE (278) 38
    GT (279) 35
    GE (280) 36
    AND (281) 39
    OR (282) 40
    ASSIGN (283) 46 50 65 66
    ARRAY (284) 60
    IF (285) 47 48
    THEN (286) 47 48
    ELSE (287) 47
    WHILE (288) 49
    FOR (289) 50
    TO (290) 50
    DO (291) 49 50
    LET (292) 51
    IN (293) 51
    END (294) 51
    OF (295) 45 60
    BREAK (296) 6
    NIL (297) 4
    FUNCTION (298) 67 68
    VAR (299) 65 66
    TYPE (300) 57
    UMINUS (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    program <exp> (48)
        on left: 1
        on right: 0
    exp <exp> (49)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 1 20 22 25 27 28 29 30 31 32 33 34 35 36 37 38 39 40 42 44 45 46 47 48 49 50 65 66 67 68 71
    expression_sequence <expList> (50)
        on left: 20
        on right: 7 51
    exp_seq_tail <expList> (51)
        on left: 21 22
        on right: 20 22
    function_call <exp> (52)
        on left: 23
        on right: 8
    function_args <expList> (53)
        on left: 24 25
        on right: 23
    function_args_tail <expList> (54)
        on left: 26 27
        on right: 25 27
    arithmetic_exp <exp> (55)
        on left: 28 29 30 31
        on right: 9
    negation_exp <exp> (56)
        on left: 32
        on right: 10
    comparison_exp <exp> (57)
        on left: 33 34 35 36 37 38
        on right: 11
    boolean_exp <exp> (58)
        on left: 39 40
        on right: 12
    record_creation <exp> (59)
        on left: 41
        on right: 13
    record_list <efieldList> (60)
        on left: 42
        on right: 41
    record_list_extension <efieldList> (61)
        on left: 43 44
        on right: 42 44
    array_creation <exp> (62)
        on left: 45
        on right: 14
    assignment_exp <exp> (63)
        on left: 46
        on right: 15
    if_statement <exp> (64)
        on left: 47 48
        on right: 16
    while_loop <exp> (65)
        on left: 49
        on right: 17
    for_loop <exp> (66)
        on left: 50
        on right: 18
    let_statement <exp> (67)
        on left: 51
        on right: 19
    declaration_sequence <decList> (68)
        on left: 52 53
        on right: 51 53
    declaration <dec> (69)
        on left: 54 55 56
        on right: 53
    type_declaration <dec> (70)
        on left: 57
        on right: 54
    type <ty> (71)
        on left: 58 59 60
        on right: 57
    type_fields <fieldList> (72)
        on left: 61 62
        on right: 59 67 68
    type_fields_extension <fieldList> (73)
        on left: 63 64
        on right: 62 64
    variable_declaration <dec> (74)
        on left: 65 66
        on right: 55
    function_declaration <fundec> (75)
        on left: 67 68
        on right: 56
    lvalue <var> (76)
        on left: 69 70 71
        on right: 3 46 70 71


State 0

    0 $accept: • program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program          go to state 12
    exp              go to state 13
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 1

   23 function_call: ID • LPAREN function_args RPAREN
   41 record_creation: ID • LBRACE record_list RBRACE
   45 array_creation: ID • LBRACK exp RBRACK OF exp
   69 lvalue: ID •

    LPAREN  shift, and go to state 27
    LBRACK  shift, and go to state 28
    LBRACE  shift, and go to state 29

    LBRACK    [reduce using rule 69 (lvalue)]
    $default  reduce using rule 69 (lvalue)

    shift/reduce conflict on token LBRACK:
       69 lvalue: ID •
       45 array_creation: ID • LBRACK exp RBRACK OF exp
      First example: ID • LBRACK exp RBRACK OF exp $end
      Shift derivation
        $accept
        ↳ 0: program                                        $end
             ↳ 1: exp
                  ↳ 14: array_creation
                        ↳ 45: ID • LBRACK exp RBRACK OF exp
      Second example: ID • LBRACK exp RBRACK $end
      Reduce derivation
        $accept
        ↳ 0: program                                      $end
             ↳ 1: exp
                  ↳ 3: lvalue
                       ↳ 71: lvalue     LBRACK exp RBRACK
                             ↳ 69: ID •



State 2

    5 exp: STRING •

    $default  reduce using rule 5 (exp)


State 3

    2 exp: INT •

    $default  reduce using rule 2 (exp)


State 4

    7 exp: LPAREN • expression_sequence RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp                  go to state 30
    expression_sequence  go to state 31
    function_call        go to state 14
    arithmetic_exp       go to state 15
    negation_exp         go to state 16
    comparison_exp       go to state 17
    boolean_exp          go to state 18
    record_creation      go to state 19
    array_creation       go to state 20
    assignment_exp       go to state 21
    if_statement         go to state 22
    while_loop           go to state 23
    for_loop             go to state 24
    let_statement        go to state 25
    lvalue               go to state 26


State 5

   32 negation_exp: MINUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 32
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 6

   47 if_statement: IF • exp THEN exp ELSE exp
   48             | IF • exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 33
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 7

   49 while_loop: WHILE • exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 34
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 8

   50 for_loop: FOR • ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 35


State 9

   51 let_statement: LET • declaration_sequence IN expression_sequence END

    FUNCTION  shift, and go to state 36
    VAR       shift, and go to state 37
    TYPE      shift, and go to state 38

    $default  reduce using rule 52 (declaration_sequence)

    declaration_sequence  go to state 39
    declaration           go to state 40
    type_declaration      go to state 41
    variable_declaration  go to state 42
    function_declaration  go to state 43


State 10

    6 exp: BREAK •

    $default  reduce using rule 6 (exp)


State 11

    4 exp: NIL •

    $default  reduce using rule 4 (exp)


State 12

    0 $accept: program • $end

    $end  shift, and go to state 44


State 13

    1 program: exp •
   28 arithmetic_exp: exp • PLUS exp
   29               | exp • MINUS exp
   30               | exp • TIMES exp
   31               | exp • DIVIDE exp
   33 comparison_exp: exp • EQ exp
   34               | exp • NEQ exp
   35               | exp • GT exp
   36               | exp • GE exp
   37               | exp • LT exp
   38               | exp • LE exp
   39 boolean_exp: exp • AND exp
   40            | exp • OR exp

    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    TIMES   shift, and go to state 47
    DIVIDE  shift, and go to state 48
    EQ      shift, and go to state 49
    NEQ     shift, and go to state 50
    LT      shift, and go to state 51
    LE      shift, and go to state 52
    GT      shift, and go to state 53
    GE      shift, and go to state 54
    AND     shift, and go to state 55
    OR      shift, and go to state 56

    $default  reduce using rule 1 (program)


State 14

    8 exp: function_call •

    $default  reduce using rule 8 (exp)


State 15

    9 exp: arithmetic_exp •

    $default  reduce using rule 9 (exp)


State 16

   10 exp: negation_exp •

    $default  reduce using rule 10 (exp)


State 17

   11 exp: comparison_exp •

    $default  reduce using rule 11 (exp)


State 18

   12 exp: boolean_exp •

    $default  reduce using rule 12 (exp)


State 19

   13 exp: record_creation •

    $default  reduce using rule 13 (exp)


State 20

   14 exp: array_creation •

    $default  reduce using rule 14 (exp)


State 21

   15 exp: assignment_exp •

    $default  reduce using rule 15 (exp)


State 22

   16 exp: if_statement •

    $default  reduce using rule 16 (exp)


State 23

   17 exp: while_loop •

    $default  reduce using rule 17 (exp)


State 24

   18 exp: for_loop •

    $default  reduce using rule 18 (exp)


State 25

   19 exp: let_statement •

    $default  reduce using rule 19 (exp)


State 26

    3 exp: lvalue •
   46 assignment_exp: lvalue • ASSIGN exp
   70 lvalue: lvalue • DOT ID
   71       | lvalue • LBRACK exp RBRACK

    LBRACK  shift, and go to state 57
    DOT     shift, and go to state 58
    ASSIGN  shift, and go to state 59

    $default  reduce using rule 3 (exp)


State 27

   23 function_call: ID LPAREN • function_args RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 24 (function_args)

    exp              go to state 60
    function_call    go to state 14
    function_args    go to state 61
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 28

   45 array_creation: ID LBRACK • exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 62
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 29

   41 record_creation: ID LBRACE • record_list RBRACE

    ID  shift, and go to state 63

    record_list  go to state 64


State 30

   20 expression_sequence: exp • exp_seq_tail
   28 arithmetic_exp: exp • PLUS exp
   29               | exp • MINUS exp
   30               | exp • TIMES exp
   31               | exp • DIVIDE exp
   33 comparison_exp: exp • EQ exp
   34               | exp • NEQ exp
   35               | exp • GT exp
   36               | exp • GE exp
   37               | exp • LT exp
   38               | exp • LE exp
   39 boolean_exp: exp • AND exp
   40            | exp • OR exp

    SEMICOLON  shift, and go to state 65
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    TIMES      shift, and go to state 47
    DIVIDE     shift, and go to state 48
    EQ         shift, and go to state 49
    NEQ        shift, and go to state 50
    LT         shift, and go to state 51
    LE         shift, and go to state 52
    GT         shift, and go to state 53
    GE         shift, and go to state 54
    AND        shift, and go to state 55
    OR         shift, and go to state 56

    $default  reduce using rule 21 (exp_seq_tail)

    exp_seq_tail  go to state 66


State 31

    7 exp: LPAREN expression_sequence • RPAREN

    RPAREN  shift, and go to state 67


State 32

   28 arithmetic_exp: exp • PLUS exp
   29               | exp • MINUS exp
   30               | exp • TIMES exp
   31               | exp • DIVIDE exp
   32 negation_exp: MINUS exp •
   33 comparison_exp: exp • EQ exp
   34               | exp • NEQ exp
   35               | exp • GT exp
   36               | exp • GE exp
   37               | exp • LT exp
   38               | exp • LE exp
   39 boolean_exp: exp • AND exp
   40            | exp • OR exp

    $default  reduce using rule 32 (negation_exp)


State 33

   28 arithmetic_exp: exp • PLUS exp
   29               | exp • MINUS exp
   30               | exp • TIMES exp
   31               | exp • DIVIDE exp
   33 comparison_exp: exp • EQ exp
   34               | exp • NEQ exp
   35               | exp • GT exp
   36               | exp • GE exp
   37               | exp • LT exp
   38               | exp • LE exp
   39 boolean_exp: exp • AND exp
   40            | exp • OR exp
   47 if_statement: IF exp • THEN exp ELSE exp
   48             | IF exp • THEN exp

    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    TIMES   shift, and go to state 47
    DIVIDE  shift, and go to state 48
    EQ      shift, and go to state 49
    NEQ     shift, and go to state 50
    LT      shift, and go to state 51
    LE      shift, and go to state 52
    GT      shift, and go to state 53
    GE      shift, and go to state 54
    AND     shift, and go to state 55
    OR      shift, and go to state 56
    THEN    shift, and go to state 68


State 34

   28 arithmetic_exp: exp • PLUS exp
   29               | exp • MINUS exp
   30               | exp • TIMES exp
   31               | exp • DIVIDE exp
   33 comparison_exp: exp • EQ exp
   34               | exp • NEQ exp
   35               | exp • GT exp
   36               | exp • GE exp
   37               | exp • LT exp
   38               | exp • LE exp
   39 boolean_exp: exp • AND exp
   40            | exp • OR exp
   49 while_loop: WHILE exp • DO exp

    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    TIMES   shift, and go to state 47
    DIVIDE  shift, and go to state 48
    EQ      shift, and go to state 49
    NEQ     shift, and go to state 50
    LT      shift, and go to state 51
    LE      shift, and go to state 52
    GT      shift, and go to state 53
    GE      shift, and go to state 54
    AND     shift, and go to state 55
    OR      shift, and go to state 56
    DO      shift, and go to state 69


State 35

   50 for_loop: FOR ID • ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 70


State 36

   67 function_declaration: FUNCTION • ID LPAREN type_fields RPAREN EQ exp
   68                     | FUNCTION • ID LPAREN type_fields RPAREN COLON ID EQ exp

    ID  shift, and go to state 71


State 37

   65 variable_declaration: VAR • ID ASSIGN exp
   66                     | VAR • ID COLON ID ASSIGN exp

    ID  shift, and go to state 72


State 38

   57 type_declaration: TYPE • ID EQ type

    ID  shift, and go to state 73


State 39

   51 let_statement: LET declaration_sequence • IN expression_sequence END

    IN  shift, and go to state 74


State 40

   53 declaration_sequence: declaration • declaration_sequence

    FUNCTION  shift, and go to state 36
    VAR       shift, and go to state 37
    TYPE      shift, and go to state 38

    $default  reduce using rule 52 (declaration_sequence)

    declaration_sequence  go to state 75
    declaration           go to state 40
    type_declaration      go to state 41
    variable_declaration  go to state 42
    function_declaration  go to state 43


State 41

   54 declaration: type_declaration •

    $default  reduce using rule 54 (declaration)


State 42

   55 declaration: variable_declaration •

    $default  reduce using rule 55 (declaration)


State 43

   56 declaration: function_declaration •

    $default  reduce using rule 56 (declaration)


State 44

    0 $accept: program $end •

    $default  accept


State 45

   28 arithmetic_exp: exp PLUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 76
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 46

   29 arithmetic_exp: exp MINUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 77
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 47

   30 arithmetic_exp: exp TIMES • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 78
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 48

   31 arithmetic_exp: exp DIVIDE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 79
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 49

   33 comparison_exp: exp EQ • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
